syntax = "proto3";

package pb;

option py_generic_services = true;

service PingPong {
    rpc Ping (PingRequest) returns (PongResult) {}
}

message PingRequest {
    uint64 id = 1;
    string name = 2;
}

message PongResult{
    uint64 id = 1;
    int64 receive_time = 2;
    int64 send_time = 3;
}
